Migration to Java 21 LTS and ffmpeg 7.0.